@@ -9,7 +9,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkMenu.h,v 1.16 2009/01/14 22:48:10 nijtmans Exp $
+ * RCS: @(#) $Id: tkMenu.h,v 1.17 2010/01/03 19:50:59 patthoyts Exp $
  */
 
 #ifndef _TKMENU
@@ -47,6 +47,19 @@ typedef struct TkMenuPlatformEntryData_ *TkMenuPlatformEntryData;
 enum compound {
     COMPOUND_BOTTOM, COMPOUND_CENTER, COMPOUND_LEFT, COMPOUND_NONE,
     COMPOUND_RIGHT, COMPOUND_TOP
+};
+
+/*
+ * Additional menu entry drawing parameters for Windows platform.
+ * DRAW_MENU_ENTRY_ARROW makes TkpDrawMenuEntry draw the arrow
+ * itself when cascade entry is disabled.
+ * DRAW_MENU_ENTRY_NOUNDERLINE forbids underline when ODS_NOACCEL
+ * is set, thus obeying the system-wide Windows UI setting.
+ */
+
+enum drawingParameters {
+    DRAW_MENU_ENTRY_ARROW = (1<<0),
+    DRAW_MENU_ENTRY_NOUNDERLINE = (1<<1)
 };
 
 /*
@@ -546,7 +559,7 @@ MODULE_SCOPE void	TkpDrawMenuEntry(TkMenuEntry *mePtr,
 			    Drawable d, Tk_Font tkfont,
 			    const Tk_FontMetrics *menuMetricsPtr, int x,
 			    int y, int width, int height, int strictMotif,
-			    int drawArrow);
+			    int drawingParameters);
 MODULE_SCOPE void	TkpMenuInit(void);
 MODULE_SCOPE int	TkpMenuNewEntry(TkMenuEntry *mePtr);
 MODULE_SCOPE int	TkpNewMenu(TkMenu *menuPtr);
